# Valgory

./: README.md
ClassWorks/15.11.17/createTree/: CMakeLists.txt  main.cpp  main.cpp.remake
ClassWorks/FistWork/Date/: main.cpp
ClassWorks/FistWork/Ex_1/: main.cpp
ClassWorks/FistWork/ex_2/: main.cpp
ClassWorks/FistWork/ex_3/: main.cpp
ClassWorks/FistWork/ex_4/: main.cpp
ClassWorks/FistWork/ex_5/: main.cpp
ClassWorks/FistWork/ex_7/: main.cpp
ClassWorks/Pointers/Ex_1/: main.cpp
ClassWorks/SecondWork/ConvertTo16/: main.cpp
ClassWorks/SecondWork/ConvertToBits/: main.cpp
ClassWorks/SecondWork/Round/: main.cpp
ClassWorks/SecondWork/SovNumbers/: main.cpp
ClassWorks/SecondWork/brackets/: main.cpp
ConvertToBits/: main.cpp
Filters/: CMakeLists.txt  main.cpp
HomeWorks/FirstWork/3dExercise/: CMakeLists.txt  main.cpp
HomeWorks/FirstWork/4thExercise/: CMakeLists.txt  main.cpp
HomeWorks/FirstWork/SecondExercise/: CMakeLists.txt  main.cpp
MATAN/: CMakeLists.txt  main.cpp
NetworkOfCinemas/: CMakeLists.txt  Cinema.cpp  Cinema.h  CinemaHall.cpp  CinemaHall.h  Film.cpp  Film.h  JSon.cpp  JSon.h  NetworkOfCinemas.cpp  NetworkOfCinemas.h  Seat.cpp  Seat.h  Session.cpp  Session.h  SessionSerial.cpp  SessionSerial.h  file.json  main.cpp
Patterns/: CMakeLists.txt  main.cpp
QuickSort/: CMakeLists.txt  Qsort.cpp  Qsort.h  main.cpp  tests.cpp
SmoothSort/: CMakeLists.txt  main.cpp
SortList/: CMakeLists.txt  main.cpp
tree_levels/: CMakeLists.txt  main.cpp
